<resources>
    <string name="app_name">KotlinCalculator</string>
    <string name="del_all_sym_btn">DEL</string>
    <string name="del_one_sym_btn">C</string>
    <string name="brc_open">(</string>
    <string name="brc_close">)</string>
    <string name="root_sym_btn">√</string>
    <string name="pow_btn">^</string>
    <string name="div_btn">/</string>
    <string name="multiply_btn">*</string>
    <string name="seven_btn">7</string>
    <string name="nine_btn">9</string>
    <string name="minus_btn">-</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="plus_btn">+</string>
    <string name="one_btn">1</string>
    <string name="eight_btn">8</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="equal_btn">=</string>
    <string name="null_btn">0</string>
    <string name="point_btn">.</string>
</resources>