<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:rowCount="8"
    android:columnCount="4">


    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/result_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/del_all_sym_btn"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/del_one_sym_btn"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/brc_open"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/brc_close"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/root_sym_btn"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pow_btn"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/div_btn"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply_btn"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus_btn"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus_btn"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal_btn"
        android:layout_rowSpan="2"
        style="@style/sym_buttons_style"
        />
    <TextView
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_columnSpan="2"
        android:text="@string/null_btn"
        style="@style/num_buttons_style"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/point_btn"
        style="@style/sym_buttons_style"
        />


</GridLayout>